fixed an alignment issue on the index and game pages, fixed the email.js code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,7 @@ footer a:hover {
     background-color: rgba(231,208,106,0.9);
     margin: auto;
     margin-top: 2%;
+    width: 80%;
 }
 
 #how-to-modal-content {
